@@ -43,8 +43,10 @@ word-length:			60
 #
 assign-clause:			mf
 
-# 78 items have normal operator precedence
-78-precedence:		yes
+# 01 AS CONSTANT items are allowed
+constant-01:		error
+# 78 items are allowed
+constant-78:		ok
 
 # If yes, file names are resolved at run time using
 # environment variables.
