@@ -44,8 +44,10 @@ word-length:			30  # not verified yet
 #
 assign-clause:			ibm
 
-# 78 items have normal operator precedence
-78-precedence:		yes
+# 01 AS CONSTANT items are allowed
+constant-01:		error
+# 78 items are allowed
+constant-78:		ok
 
 # If yes, file names are resolved at run time using
 # environment variables.
