@@ -399,7 +399,6 @@ test.conf: Missing definitions
 	No definition of 'hostsign'
 	No definition of 'accept-update'
 	No definition of 'accept-auto'
-	No definition of '78-precedence'
 	No definition of 'comment-paragraphs'
 	No definition of 'memory-size-clause'
 	No definition of 'multiple-file-tape-clause'
@@ -420,6 +419,8 @@ test.conf: Missing definitions
 	No definition of 'section-segments'
 	No definition of 'alter-statement'
 	No definition of 'word-continuation'
+	No definition of 'constant-78'
+	No definition of 'constant-01'
 ])
 
 AT_CLEANUP
